--- a/packages/impression/package.json
+++ b/packages/impression/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "impressionjs",
+  "name": "@clover-shared/impression",
   "version": "1.0.0",
   "description": "Item exposure tracking",
-  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@types/hoist-non-react-statics": "^3.3.1"
