--- a/packages/impression/package.json
+++ b/packages/impression/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@clover-shared/impression",
+  "main": "lib/index.js",
   "version": "1.0.0",
+  "source": {
+    "./lib/*.js": "./src/$1"
+  },
   "description": "Item exposure tracking",
   "license": "MIT",
   "dependencies": {
-    "@types/hoist-non-react-statics": "^3.3.1"
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "intersection-observer": "^0.11.0"
   }
 }
